--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     /></a>
                   </div>
                   <div class="item">
-                    <a href="https://youtu.be/VZ80MwlyHp4" class="icon popup-vimeo d-flex justify-content-center align-items-center" >
+                    <a href="https://youtube.com/embed/VZ80MwlyHp4" class="icon popup-vimeo d-flex justify-content-center align-items-center" >
                       <img
                       class="img-responsive about-img"
                       src="images/about2.png"
