--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                     /></a>
                   </div>
                   <div class="item">
-                    <a href="https://www.youtube.com/embed/VZ80MwlyHp4" class="icon popup-youtube d-flex justify-content-center align-items-center" >
+                    <a href="https://www.youtube.com/watch?v=VZ80MwlyHp4" class="icon popup-youtube d-flex justify-content-center align-items-center" >
+      
                       <img
                       class="img-responsive about-img"
                       src="images/about2.png"
