add new project

--- a/work.html
+++ b/work.html
@@ -101,6 +101,23 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
+							<a href="pages/ELEONOR.html" target="_blank" class="work-img" style="background-image: url(images/ELEONOR.png);">
+								<div class="display-t"> 
+									<div class="work-name">
+										<h2>ELEONOR</h2> 
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>Founded in 2013 Eleonor is a modern, minimalist women's jewelry line with a focus on versatile and timeless pieces. We believe that quality jewelry doesn't have to be expensive</p>
+									<p class="read"><a href="pages/ELEONOR.html" target="_blank">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
 							<a href="pages/power teck.html" target="_blank" class="work-img" style="background-image: url(images/power\ teck.png);">
 								<div class="display-t">
 									<div class="work-name">
