--- a/index.html
+++ b/index.html
@@ -231,6 +231,24 @@
               <div class="item">
                 <div class="col-md-12">
                   <div class="article">
+                    <a href="pages/ELEONOR.html" class="blog-img" target="_blank">
+                      <img class="img-responsive" src="images/ELEONOR-main .png">
+                      <div class="overlay"></div>
+                      <div class="link">
+                        <span class="read">show project</h2>
+                      </div>
+                    </a>
+                    <div class="desc">
+                      <span class="meta">2022/website</span>
+                      <h2><a href="pages/ELEONOR.html" target="_blank">ELEONOR</a></h2>
+                      <p>Founded in 2013 Eleonor is a modern, minimalist women's jewelry line with a focus on versatile and timeless pieces. We believe that quality jewelry doesn't have to be expensive</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="col-md-12">
+                  <div class="article">
                     <a href="pages/power teck.html" class="blog-img" target="_blank">
                       <img class="img-responsive" src="images/power teck-main.png">
                       <div class="overlay"></div>
