add new project

--- a/index.html
+++ b/index.html
@@ -231,6 +231,25 @@
               <div class="item">
                 <div class="col-md-12">
                   <div class="article">
+                    <a href="pages/DEZENT.html" class="blog-img" target="_blank">
+                      <img class="img-responsive" src="images/DEZENT-main.png">
+                      <div class="overlay"></div>
+                      <div class="link">
+                        <span class="read">show project</h2>
+                      </div>
+                    </a>
+                    <div class="desc">
+                      <span class="meta">2022/app</span>
+                      <h2><a href="pages/DEZENT.html" target="_blank">DEZENT</a></h2>
+                      <p>Dezent is an application that makes buying and selling classic cars easy. With Dezent, you can connect with other classic car enthusiasts, get expert advice, and find the perfect car for you. 
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="col-md-12">
+                  <div class="article">
                     <a href="pages/ELEONOR.html" class="blog-img" target="_blank">
                       <img class="img-responsive" src="images/ELEONOR-main .png">
                       <div class="overlay"></div>
@@ -314,24 +333,6 @@
                       <span class="meta">2022/website</span>
                       <h2><a href="pages/Shining Stars.html" target="_blank">Shining Stars</a></h2>
                       <p>Shining Stars is a high school that offers an individualized and flexible curriculum for students who want to achieve their best</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="col-md-12">
-                  <div class="article">
-                    <a href="pages/Clementine.html" class="blog-img" target="_blank">
-                      <img class="img-responsive" src="images/Clementine -main.png">
-                      <div class="overlay"></div>
-                      <div class="link">
-                        <span class="read">show project</h2>
-                      </div>
-                    </a>
-                    <div class="desc">
-                      <span class="meta">2022/Concept</span>
-                      <h2><a href="pages/Clementine.html" target="_blank">Clementine</a></h2>
-                      <p>A modern, healthy restaurant for people who love food.we celebrate seasonal ingredients, classic technique, and intelligent hospitality</p>
                     </div>
                   </div>
                 </div>
