--- a/work.html
+++ b/work.html
@@ -101,6 +101,24 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
+							<a href="pages/DEZENT.html" target="_blank" class="work-img" style="background-image: url(images/DEZENT.png);">
+								<div class="display-t"> 
+									<div class="work-name">
+										<h2>DEZENT</h2> 
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>Dezent is an application that makes buying and selling classic cars easy. With Dezent, you can connect with other classic car enthusiasts, get expert advice, and find the perfect car for you. 
+									</p>
+									<p class="read"><a href="pages/DEZENT.html" target="_blank">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
 							<a href="pages/ELEONOR.html" target="_blank" class="work-img" style="background-image: url(images/ELEONOR.png);">
 								<div class="display-t"> 
 									<div class="work-name">
