--- a/index.html
+++ b/index.html
@@ -152,16 +152,15 @@
                       <strong
                         >firstival let me thank you to visit my
                         portfolio</strong
+                      ><br>
+                      allow me to introduce myself <br>I’m a<strong
                       >
-                      let me give you a short intro about myself I’m a junior
-                      web designer from Syria since I laid eyes on a computer I
-                      think I was about 9 years old, I had a thing for design,
-                      user interfaces and I have a question How It's created ?
-                      From then on, my goal was to create these interfaces I
-                      learned from various online courses And worked for a few
-                      local companies for tow year now I’m freelancer I like to
-                      learn everything new in the field of web Design &amp;
-                      development. and keep my client happy
+                      UI / UX Designer / Web Designer / Junior Frontend Dev </strong>from Syria since I laid eyes on a computer I
+                      think I was about 9 years old,I had a thing for design,I was curious about
+                      user interfaces and I have a question How It's created?
+                      From then on, my goal was to create these interfaces I am always looking for ways to create beautiful user-friendly websites and user interfaces that meet the needs of both users and businesses 
+                     <br><strong>Welcome to my website </strong> I hope you enjoy your journey here. If you have any questions or feedback, please don't hesitate to contact me.<br><strong>Thanks for visiting</strong>
+
                     </p>
                     <h3>What I Do ...</h3>
                     <div class="row">
