add new project

--- a/index.html
+++ b/index.html
@@ -238,6 +238,24 @@
               <div class="item">
                 <div class="col-md-12">
                   <div class="article">
+                    <a href="pages/zoe.html" class="blog-img" target="_blank">
+                      <img class="img-responsive" src="images/zoe-main.png">
+                      <div class="overlay"></div>
+                      <div class="link">
+                        <span class="read">show project</h2>
+                      </div>
+                    </a>
+                    <div class="desc">
+                      <span class="meta">2023/website</span>
+                      <h2><a href="pages/zoe.html" target="_blank">zoe coffee</a></h2>
+                      <p>zoe a specialty coffee roaster that has been dedicated to sourcing and roasting the finest coffee beans from around the world since 2008 </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="col-md-12">
+                  <div class="article">
                     <a href="pages/DEZENT.html" class="blog-img" target="_blank">
                       <img class="img-responsive" src="images/DEZENT-main.png">
                       <div class="overlay"></div>
@@ -308,24 +326,7 @@
                   </div>
                 </div>
               </div>
-              <div class="item">
-                <div class="col-md-12">
-                  <div class="article">
-                    <a href="pages/GrandeXeres.html" class="blog-img" target="_blank">
-                      <img class="img-responsive" src="images/GrandeXeres-main.png">
-                      <div class="overlay"></div>
-                      <div class="link">
-                        <span class="read">show project</h2>
-                      </div>
-                    </a>
-                    <div class="desc">
-                      <span class="meta">2022/website</span>
-                      <h2><a href="pages/GrandeXeres.html" target="_blank">GrandeXeres</a></h2>
-                      <p>GrandeXeres offers affordable truck rentals for moving, hauling, and more. We have the right size truck for your needs.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              
               <div class="item">
                 <div class="col-md-12">
                   <div class="article">
