--- a/index.html
+++ b/index.html
@@ -238,6 +238,24 @@
               <div class="item">
                 <div class="col-md-12">
                   <div class="article">
+                    <a href="pages/Budget Boss.html" class="blog-img" target="_blank">
+                      <img class="img-responsive" src="images/Budget Boss-main.png">
+                      <div class="overlay"></div>
+                      <div class="link">
+                        <span class="read">show project</h2>
+                      </div>
+                    </a>
+                    <div class="desc">
+                      <span class="meta">2023/website</span>
+                      <h2><a href="pages/Budget Boss.html" target="_blank">Budget Boss</a></h2>
+                      <p>is a personal finance and budgeting resource for individuals looking to improve their financial wellness.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="col-md-12">
+                  <div class="article">
                     <a href="pages/zoe.html" class="blog-img" target="_blank">
                       <img class="img-responsive" src="images/zoe-main.png">
                       <div class="overlay"></div>
@@ -326,25 +344,6 @@
                   </div>
                 </div>
               </div>
-              
-              <div class="item">
-                <div class="col-md-12">
-                  <div class="article">
-                    <a href="pages/Shining Stars.html" class="blog-img" target="_blank">
-                      <img class="img-responsive" src="images/Shining Stars-main.png">
-                      <div class="overlay"></div>
-                      <div class="link">
-                        <span class="read">show project</h2>
-                      </div>
-                    </a>
-                    <div class="desc">
-                      <span class="meta">2022/website</span>
-                      <h2><a href="pages/Shining Stars.html" target="_blank">Shining Stars</a></h2>
-                      <p>Shining Stars is a high school that offers an individualized and flexible curriculum for students who want to achieve their best</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -363,7 +362,7 @@
            <div class="col-md-12 col-md-offset-0  text-left">
 
         <p style="font-size: 12px;">
-        Copyright &copy; <script>document.write(new Date().getFullYear());</script> 
+        Made by Galal Helany &copy; <script>document.write(new Date().getFullYear());</script> 
          
         </p>
       </div>
