--- a/work.html
+++ b/work.html
@@ -101,6 +101,24 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
+							<a href="pages/Budget Boss.html" target="_blank" class="work-img" style="background-image: url(images/Budget\ Boss.png);">
+								<div class="display-t"> 
+									<div class="work-name">
+										<h2>Budget Boss</h2> 
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>is a personal finance and budgeting resource for individuals looking to improve their financial wellness
+									</p>
+									<p class="read"><a href="pages/Budget Boss.html" target="_blank">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
 							<a href="pages/zoe.html" target="_blank" class="work-img" style="background-image: url(images/zoe.png);">
 								<div class="display-t"> 
 									<div class="work-name">
