--- a/index.html
+++ b/index.html
@@ -235,6 +235,26 @@
           </div>
           <div class="row animate-box">
             <div class="owl-carousel1">
+               <div class="item">
+                <div class="col-md-12">
+                  <div class="article">
+                    <a href="pages/Aktarr.html" class="blog-img" target="_blank">
+                      <img class="img-responsive" src="images/Aktarr-main.png">
+                      <div class="overlay"></div>
+                      <div class="link">
+                        <span class="read">show project</h2>
+                      </div>
+                    </a>
+                    <div class="desc">
+                      <span class="meta">2023/website</span>
+                      <h2><a href="pages/Aktarr.html" target="_blank">Aktarr</a></h2>
+                      <p>  In today's fast-paced digital world, the way people consume
+                        news has changed dramatically. With the rise of social media
+                        and mobile devices</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="item">
                 <div class="col-md-12">
                   <div class="article">
