--- a/work.html
+++ b/work.html
@@ -101,6 +101,26 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
+							<a href="pages/Aktarr.html" target="_blank" class="work-img" style="background-image: url(images/Aktarr.png);">
+								<div class="display-t"> 
+									<div class="work-name">
+										<h2>Aktarr</h2> 
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>  In today's fast-paced digital world, the way people consume
+										news has changed dramatically. With the rise of social media
+										and mobile devices,
+									</p>
+									<p class="read"><a href="pages/Aktarr.html" target="_blank">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
 							<a href="pages/Budget Boss.html" target="_blank" class="work-img" style="background-image: url(images/Budget\ Boss.png);">
 								<div class="display-t"> 
 									<div class="work-name">
