add new project

--- a/index.html
+++ b/index.html
@@ -238,6 +238,24 @@
               <div class="item">
                 <div class="col-md-12">
                   <div class="article">
+                    <a href="pages/code masters.html" class="blog-img" target="_blank">
+                      <img class="img-responsive" src="images/codemasters -home.png">
+                      <div class="overlay"></div>
+                      <div class="link">
+                        <span class="read">show project</h2>
+                      </div>
+                    </a>
+                    <div class="desc">
+                      <span class="meta">2023/website</span>
+                      <h2><a href="pages/code masters.html" target="_blank">Code Masters</a></h2>
+                      <p>Code Masters is a leading online learning platform dedicated to empowering individuals with coding skills from beginner to advanced levels. Our mission is to make programming learning easy.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="col-md-12">
+                  <div class="article">
                     <a href="pages/Aktarr.html" class="blog-img" target="_blank">
                       <img class="img-responsive" src="images/Aktarr-main.png">
                       <div class="overlay"></div>
