--- a/work.html
+++ b/work.html
@@ -101,6 +101,27 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
+							<a href="pages/code masters.html" target="_blank" class="work-img" style="background-image: url(images/codemasters\ .png);">
+								<div class="display-t"> 
+									<div class="work-name">
+										<h2>Code Masters</h2> 
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p> Code Masters is a leading online learning platform dedicated
+										to empowering individuals with coding skills from beginner
+										to advanced levels. Our mission is to make programming
+										learning easy.
+									</p>
+									<p class="read"><a href="pages/Aktarr.html" target="_blank">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
 							<a href="pages/Aktarr.html" target="_blank" class="work-img" style="background-image: url(images/Aktarr.png);">
 								<div class="display-t"> 
 									<div class="work-name">
