--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                       ><br>
                       allow me to introduce myself <br>I’m a<strong
                       >
-                      UI / UX Designer / Web Designer / Junior Frontend Dev </strong>from Syria since I laid eyes on a computer I
+                      UX / UI Designer / Web Designer / Frontend Dev </strong>from Syria since I laid eyes on a computer I
                       think I was about 9 years old,I had a thing for design,I was curious about
                       user interfaces and I have a question How It's created?
                       From then on, my goal was to create these interfaces I am always looking for ways to create beautiful user-friendly websites and user interfaces that meet the needs of both users and businesses 
