--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <div class="services animate-box">
                           <ul>
                             <li>HTML / CSS / js</li>
-                            <li>Brading &amp; Visual Identity</li>
+                            <li>Branding &amp; Visual Identity</li>
                           </ul>
                         </div>
                       </div>
