--- a/index.html
+++ b/index.html
@@ -392,14 +392,10 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <div class="nav-bar-down">
-              <a class="logo1" href="my-resume.html"><span>/my resume</span></a>
-            </div>
-          </div>
-           <div class="col-md-12 col-md-offset-0  text-left">
+        
+          <div class="col-md-12 col-md-offset-0  text-center">
 
-        <p style="font-size: 12px;">
+        <p style="font-size: 14px;">
         Made by Galal Helany &copy; <script>document.write(new Date().getFullYear());</script> 
          
         </p>
