--- a/pages/Aktarr.html
+++ b/pages/Aktarr.html
@@ -166,7 +166,7 @@
           <div class="col-md-12">
             <div class="nav-bar-down">
               <button class="logo1" id="scrollToTopBtn">
-                <span>/back to top</span>
+                <span>back to top</span>
               </button>
             </div>
             <div class="col-md-12 col-md-offset-0 text-left">
