--- a/pages/Shining Stars.html
+++ b/pages/Shining Stars.html
@@ -157,7 +157,7 @@
           <div class="col-md-12">
             <div class="nav-bar-down">
               <button class="logo1" id="scrollToTopBtn">
-                <span>/back to top</span>
+                <span>back to top</span>
               </button>
             </div>
             <p class="footerl">
