--- a/pages/Clementine.html
+++ b/pages/Clementine.html
@@ -127,7 +127,7 @@
 			<div class="col-md-12">
 				<div class="nav-bar-down">
 					
-					<button class="logo1"id="scrollToTopBtn"><span>/back to top</span></button>
+					<button class="logo1"id="scrollToTopBtn"><span>back to top</span></button>
 				</div>
 				<p class="footerl">
 					Copyright &copy;
