--- a/work.html
+++ b/work.html
@@ -417,7 +417,7 @@
 			<div class="col-md-12">
 				<div class="nav-bar-down">
 					
-					<button class="logo1"id="scrollToTopBtn"><span>/back to top</span></button>
+					<button class="logo1"id="scrollToTopBtn"><span>back to top</span></button>
 				</div>
 				<div class="col-md-12 col-md-offset-0  text-left">
 					<p  class="footerl">
