--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       <div class="container">
         <div class="row">
         
-          <div class="col-md-12 col-md-offset-0  text-center">
+          <div class="col-md-12 col-md-offset-0  text-left">
 
         <p style="font-size: 14px;">
         Made by Galal Helany &copy; <script>document.write(new Date().getFullYear());</script> 
