--- a/index.html
+++ b/index.html
@@ -157,16 +157,13 @@
                     </div>
 
                     <p>
-                      <strong
-                        >firstival let me thank you to visit my
-                        portfolio</strong
-                      ><br>
-                      allow me to introduce myself <br>I’m a<strong
-                      >
-                      UX / UI Designer / Web Designer / Frontend Dev </strong>from Syria since I laid eyes on a computer I
+                      <strong>Firstival let me Thank you for visiting </strong>
+                        <br>
+
+                      since I laid eyes on a computer I
                       think I was about 9 years old,I had a thing for design,I was curious about
-                      user interfaces and I have a question How It's created?
-                      From then on, my goal was to create these interfaces I am always looking for ways to create beautiful user-friendly websites and user interfaces that meet the needs of both users and businesses 
+                      user interfaces and I have a question How It's <strong>created?</strong> 
+                      From then on, my goal was to create these interfaces <br> <strong>As a UX/UI Designer</strong> with experience in web design and front-end development, I leverage my skills in Figma and Adobe Creative Cloud to bring user-centered design principles to life. my passionate about branding, visual identity, and marketing, allowing me to create cohesive experiences that resonate with your audience. 
                      <br><strong>Welcome to my website </strong> I hope you enjoy your journey here. If you have any questions or feedback, please don't hesitate to contact me.<br><strong>Thanks for visiting</strong>
 
                     </p>
