--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <div class="desc">
                       <span class="meta">2023/website</span>
                       <h2><a href="pages/code masters.html" target="_blank">Code Masters</a></h2>
-                      <p>Code Masters is a leading online learning platform dedicated to empowering individuals with coding skills from beginner to advanced levels. Our mission is to make programming learning easy.</p>
+                      <p>Code Masters is a leading online learning platform dedicated to empowering individuals with coding skills from beginner to advanced </p>
                     </div>
                   </div>
                 </div>
@@ -319,7 +319,7 @@
                     <div class="desc">
                       <span class="meta">2022/app</span>
                       <h2><a href="pages/DEZENT.html" target="_blank">DEZENT</a></h2>
-                      <p>Dezent is an application that makes buying and selling classic cars easy. With Dezent, you can connect with other classic car enthusiasts, get expert advice, and find the perfect car for you. 
+                      <p>Dezent is an application that makes buying and selling classic cars easy. With Dezent, you can connect with other classic car enthusiasts. 
                       </p>
                     </div>
                   </div>
@@ -338,7 +338,7 @@
                     <div class="desc">
                       <span class="meta">2022/website</span>
                       <h2><a href="pages/ELEONOR.html" target="_blank">ELEONOR</a></h2>
-                      <p>Founded in 2013 Eleonor is a modern, minimalist women's jewelry line with a focus on versatile and timeless pieces. We believe that quality jewelry doesn't have to be expensive</p>
+                      <p>Founded in 2013 Eleonor is a modern, minimalist women's jewelry line with a focus on versatile and timeless pieces.</p>
                     </div>
                   </div>
                 </div>
