--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Galal Helany</title>
     <link rel="canonical" href="https://galalhelany.github.io/my/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="web design portfolio" />
-    <meta name="keywords"content="web de,website,graphic design,website design,graphic designer,web designer,webdesign,website designer,responsive web design"/>
+    <meta name="description" content="UX/UI Designer portfolio" />
+    <meta name="keywords"content="web de,website,graphic design,website design,graphic designer,web designer,webdesign,website designer,responsive web design,UX/UI Designer,fi"/>
     <meta name="author" content="GalalHelany" />
     <meta property="og:type" content="profile" />
     <meta property="og:title" content="Galal Helany" />
     <meta property="og:image" content="" />
     <meta property="og:url" content="https://galalhelany.github.io/my/" />
     <meta property="og:site_name" content="Galal Helany" />
-    <meta property="og:description" content="web design portfolio" />
+    <meta property="og:description" content="UX/UI Designer portfolio" />
     <meta name="twitter:title" content="" />
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
@@ -200,8 +200,7 @@
                         ><i class="fab fa-linkedin"> </i
                       ></a>
                       <a href="https://twitter.com/galalhelany" target="_blank">
-                        <i class="fab fa-twitter-square"></i
-                      ></a>
+                        <i class="fa-brands fa-square-x-twitter"></i></a>
                       <a
                         href="https://www.behance.net/galalhelany"
                         target="_blank"
