--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Galal Helany</title>
-  <link rel="canonical" href="https://galalhelany.github.io/my/" />
+  <link rel="canonical" href="https://galalhelany.com" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="UX/UI Designer portfolio" />
+  <meta name="description"
+    content="Galal Helany is a professional UI/UX Designer and Product Designer based in Syria. Explore my portfolio and projects." />
   <meta name="keywords"
     content="web de,website,graphic design,website design,graphic designer,web designer,webdesign,website designer,responsive web design,UX/UI Designer,fi" />
   <meta name="author" content="GalalHelany" />
   <meta property="og:type" content="profile" />
   <meta property="og:title" content="Galal Helany" />
   <meta property="og:image" content="" />
-  <meta property="og:url" content="https://galalhelany.github.io/my/" />
+  <meta property="og:url" content="https://galalhelany.com" />
   <meta property="og:site_name" content="Galal Helany" />
   <meta property="og:description" content="UX/UI Designer portfolio" />
   <meta name="twitter:title" content="" />
@@ -79,6 +80,47 @@
   <!--[if lt IE 9]>
       <script src="js/respond.min.js"></script>
     <![endif]-->
+
+  <!-- Add JSON-LD structured data here -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Galal Helany",
+      "jobTitle": "UI/UX Designer",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "SY"
+      },
+      "url": "https://galalhelany.com",
+      "hasOccupation": {
+        "@type": "Occupation",
+        "name": "UI/UX Designer"
+      },
+      "knowsAbout": ["User Interface Design", "User Experience", "Product Design"],
+      "sameAs": [
+        "https://www.linkedin.com/in/galalhelany",
+        "https://github.com/galalhelany"
+      ],
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Freelance"
+      },
+      "knowsLanguage": ["Arabic", "English"],
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://galalhelany.com"
+      },
+      "owns": {
+        "@type": "SoftwareApplication",
+        "name": "Galal Helany Portfolio",
+        "url": "https://galalhelany.com",
+        "applicationCategory": "Portfolio",
+        "operatingSystem": "All"
+      }
+    }
+  </script>
+
 </head>
 
 <body>
@@ -192,7 +234,7 @@
                   <p class="social-icons">
 
                     <a href="https://wa.me/+963959244813" target="_blank"><i class="fab fa-whatsapp-square"></i></a>
-                    <a href="mailto:galalhelany@gmail.com" target="_blank"><i class="icon-google2"
+                    <a href="mailto:hello@galalhelany.com" target="_blank"><i class="icon-google2"
                         style="font-size: 2.7em"></i></a>
                     <a href="https://www.linkedin.com/in/galalhelany" target="_blank"><i class="fab fa-linkedin">
                       </i></a>
