--- a/index.html
+++ b/index.html
@@ -4,24 +4,32 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Galal Helany</title>
+  <title>Galal Helany — A to Z Designer | UI/UX & Product Design Expert</title>
   <link rel="canonical" href="https://galalhelany.com" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
-    content="Galal Helany is a professional UI/UX Designer and Product Designer based in Syria. Explore my portfolio and projects." />
+    content="Galal Helany is a professional UI/UX and Product Designer based in Syria. Explore my portfolio, projects, and contact information." />
   <meta name="keywords"
-    content="web de,website,graphic design,website design,graphic designer,web designer,webdesign,website designer,responsive web design,UX/UI Designer,fi" />
-  <meta name="author" content="GalalHelany" />
+    content="UI UX designer Syria, product designer Syria, web design, graphic design, responsive web design, UI designer, UX designer, freelance designer Syria" />
+  <meta name="author" content="Galal Helany" />
+
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="profile" />
-  <meta property="og:title" content="Galal Helany" />
-  <meta property="og:image" content="" />
+  <meta property="og:title" content="Galal Helany — UI/UX & Product Designer" />
+  <meta property="og:description"
+    content="Explore the professional portfolio of Galal Helany, a UI/UX and Product Designer based in Syria." />
   <meta property="og:url" content="https://galalhelany.com" />
   <meta property="og:site_name" content="Galal Helany" />
-  <meta property="og:description" content="UX/UI Designer portfolio" />
-  <meta name="twitter:title" content="" />
-  <meta name="twitter:image" content="" />
-  <meta name="twitter:url" content="" />
-  <meta name="twitter:card" content="" />
+  <meta property="og:image" content="images/about1.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Galal Helany — UI/UX & Product Designer" />
+  <meta name="twitter:description"
+    content="Explore the professional portfolio of Galal Helany, a UI/UX and Product Designer based in Syria." />
+  <meta name="twitter:url" content="https://galalhelany.com" />
+  <meta name="twitter:image" content="images/about1.png" />
+
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" href="images/icon1.ico" type="images/icon type" />
   <!-- fonts -->
