--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Galal Helany — A to Z Designer | UI/UX & Product Design Expert</title>
+  <title>Galal Helany — End-to-End Designer | UI/UX & Product Design Expert</title>
   <link rel="canonical" href="https://galalhelany.com" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
