--- a/index-ar.html
+++ b/index-ar.html
@@ -36,7 +36,18 @@
   <meta name="twitter:url" content="https://galalhelany.com" />
   <meta name="twitter:image" content="https://galalhelany.com/assets/img/sharing-image-2400x2400" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LMXJVJ7XT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-3LMXJVJ7XT');
+  </script>
 
   <!-- Add JSON-LD structured data here -->
   <script type="application/ld+json">
