--- a/index.html
+++ b/index.html
@@ -49,6 +49,25 @@
     gtag('config', 'G-8XPRENC36E');
   </script>
 
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MTLZB942');
+  </script>
+  <!-- End Google Tag Manager -->
+
   <!-- Add JSON-LD structured data here -->
   <script type="application/ld+json">
     {
@@ -106,6 +125,10 @@
 </head>
 
 <body class="cover--is--visible is--loading theme--16">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MTLZB942" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <header class="app-header">
     <div class="content">
