--- a/index-ar.html
+++ b/index-ar.html
@@ -89,20 +89,34 @@
       "@type": "Person",
       "name": "جلال حيلاني",
       "jobTitle": "مصمم واجهة وتجربة المستخدم",
+      "description": "مصمم UX/UI بخبرة 5 سنوات في تصميم واجهة وتجربة المستخدم و10 سنوات في التصميم البصري. متخصص في تصميم الويب وتطوير الواجهة الأمامية، العلامات التجارية، والتسويق الرقمي لإنشاء تجارب رقمية موجهة للمستخدم وقابلة للتوسع.",
       "address": {
         "@type": "PostalAddress",
         "addressCountry": "SY"
+      },
+      "occupationLocation": {
+        "@type": "Country",
+        "name": "سوريا"
+      },
+      "estimatedSalary": {
+        "@type": "MonetaryAmount",
+        "currency": "USD",
+        "value": {
+          "@type": "QuantitativeValue",
+          "minValue": 1000,
+          "maxValue": 5000,
+          "unitText": "MONTH"
+        }
       },
       "url": "https://galalhelany.com",
       "hasOccupation": {
         "@type": "Occupation",
         "name": "مصمم واجهة وتجربة المستخدم"
       },
-      "knowsAbout": ["تصميم واجهة المستخدم", "تجربة المستخدم", "تصميم المنتجات"],
-      "sameAs": [
-        "https://www.linkedin.com/in/galalhelany",
-        "https://github.com/galalhelany"
+      "knowsAbout": ["تصميم واجهة المستخدم", "تجربة المستخدم", "تصميم المنتجات", "تصميم الويب",
+        "تطوير الواجهة الأمامية", "العلامات التجارية"
       ],
+      "sameAs": ["https://www.linkedin.com/in/galalhelany", "https://github.com/galalhelany"],
       "worksFor": {
         "@type": "Organization",
         "name": "عمل حر"
@@ -121,6 +135,7 @@
       }
     }
   </script>
+
   <link href="assets/css/normalize-8.0.1.css" rel="stylesheet">
   <link href="assets/css/reset.css" rel="stylesheet">
   <link href="assets/css/font.css" rel="stylesheet">
