--- a/index.html
+++ b/index.html
@@ -90,20 +90,34 @@
       "@type": "Person",
       "name": "Galal Helany",
       "jobTitle": "UI/UX Designer",
+      "description": "Experienced UX/UI Designer with 5 years in UX/UI and 10 years in visual design. Specializes in web design, front-end development, branding, and digital marketing, creating user-centered and scalable digital experiences.",
       "address": {
         "@type": "PostalAddress",
         "addressCountry": "SY"
+      },
+      "occupationLocation": {
+        "@type": "Country",
+        "name": "Syria"
+      },
+      "estimatedSalary": {
+        "@type": "MonetaryAmount",
+        "currency": "USD",
+        "value": {
+          "@type": "QuantitativeValue",
+          "minValue": 1000,
+          "maxValue": 5000,
+          "unitText": "MONTH"
+        }
       },
       "url": "https://galalhelany.com",
       "hasOccupation": {
         "@type": "Occupation",
         "name": "UI/UX Designer"
       },
-      "knowsAbout": ["User Interface Design", "User Experience", "Product Design"],
-      "sameAs": [
-        "https://www.linkedin.com/in/galalhelany",
-        "https://github.com/galalhelany"
+      "knowsAbout": ["User Interface Design", "User Experience", "Product Design", "Web Design",
+        "Front-End Development", "Branding"
       ],
+      "sameAs": ["https://www.linkedin.com/in/galalhelany", "https://github.com/galalhelany"],
       "worksFor": {
         "@type": "Organization",
         "name": "Freelance"
@@ -122,6 +136,7 @@
       }
     }
   </script>
+
   <link href="assets/css/normalize-8.0.1.css" rel="stylesheet">
   <link href="assets/css/reset.css" rel="stylesheet">
   <link href="assets/css/font.css" rel="stylesheet">
