--- a/index-ar.html
+++ b/index-ar.html
@@ -94,25 +94,7 @@
         "@type": "PostalAddress",
         "addressCountry": "SY"
       },
-      "occupationLocation": {
-        "@type": "Country",
-        "name": "سوريا"
-      },
-      "estimatedSalary": {
-        "@type": "MonetaryAmount",
-        "currency": "USD",
-        "value": {
-          "@type": "QuantitativeValue",
-          "minValue": 1000,
-          "maxValue": 5000,
-          "unitText": "MONTH"
-        }
-      },
       "url": "https://galalhelany.com",
-      "hasOccupation": {
-        "@type": "Occupation",
-        "name": "مصمم واجهة وتجربة المستخدم"
-      },
       "knowsAbout": ["تصميم واجهة المستخدم", "تجربة المستخدم", "تصميم المنتجات", "تصميم الويب",
         "تطوير الواجهة الأمامية", "العلامات التجارية"
       ],
@@ -126,6 +108,25 @@
         "@type": "WebPage",
         "@id": "https://galalhelany.com"
       },
+      "hasOccupation": {
+        "@type": "Occupation",
+        "name": "مصمم واجهة وتجربة المستخدم",
+        "description": "إنشاء تجارب رقمية موجهة للمستخدم من خلال تصميم UX/UI، تصميم الويب، وتطوير الواجهة الأمامية.",
+        "estimatedSalary": {
+          "@type": "MonetaryAmount",
+          "currency": "USD",
+          "value": {
+            "@type": "QuantitativeValue",
+            "minValue": 1000,
+            "maxValue": 5000,
+            "unitText": "MONTH"
+          }
+        },
+        "occupationLocation": {
+          "@type": "Country",
+          "name": "سوريا"
+        }
+      },
       "owns": {
         "@type": "SoftwareApplication",
         "name": "محفظة جلال حيلاني",
@@ -135,6 +136,7 @@
       }
     }
   </script>
+
 
   <link href="assets/css/normalize-8.0.1.css" rel="stylesheet">
   <link href="assets/css/reset.css" rel="stylesheet">
