--- a/index.html
+++ b/index.html
@@ -85,88 +85,72 @@
 
   <!-- Add JSON-LD structured data here -->
   <script type="application/ld+json">
-    < script type = "application/ld+json" > {
-        "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Galal Helany",
-        "jobTitle": "UI/UX Designer",
-        "description": "Experienced UX/UI Designer with 5 years in UX/UI and 10 years in visual design. Specializes in web design, front-end development, branding, and digital marketing, creating user-centered and scalable digital experiences.",
-        "address": {
-          "@type": "PostalAddress",
-          "addressCountry": "SY"
-        },
-        "url": "https://galalhelany.com",
-        "knowsAbout": ["User Interface Design", "User Experience", "Product Design", "Web Design",
-          "Front-End Development", "Branding"
-        ],
-        "sameAs": ["https://www.linkedin.com/in/galalhelany", "https://github.com/galalhelany"],
-        "worksFor": {
-          "@type": "Organization",
-          "name": "Freelance"
-        },
-        "knowsLanguage": ["Arabic", "English"],
-        "mainEntityOfPage": {
-          "@type": "WebPage",
-          "@id": "https://galalhelany.com"
-        },
-        "hasOccupation": {
-          "@type": "Occupation",
-          "name": "UI/UX Designer",
-          "description": "Creating user-focused digital experiences through UX/UI design, web design, and front-end development.",
-          "estimatedSalary": {
-            "@type": "MonetaryAmount",
-            "currency": "USD",
-            "value": {
-              "@type": "QuantitativeValue",
-              "minValue": 1000,
-              "maxValue": 5000,
-              "unitText": "MONTH"
-            }
-          },
-          "occupationLocation": {
-            "@type": "Country",
-            "name": "Syria"
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Galal Helany",
+      "jobTitle": "UI/UX Designer",
+      "description": "Experienced UX/UI Designer with 5 years in UX/UI and 10 years in visual design. Specializes in web design, front-end development, branding, and digital marketing, creating user-centered and scalable digital experiences.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "SY"
+      },
+      "url": "https://galalhelany.com",
+      "knowsAbout": ["User Interface Design", "User Experience", "Product Design", "Web Design",
+        "Front-End Development", "Branding"
+      ],
+      "sameAs": ["https://www.linkedin.com/in/galalhelany", "https://github.com/galalhelany"],
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Freelance"
+      },
+      "knowsLanguage": ["Arabic", "English"],
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://galalhelany.com"
+      },
+      "hasOccupation": {
+        "@type": "Occupation",
+        "name": "UI/UX Designer",
+        "description": "Creating user-focused digital experiences through UX/UI design, web design, and front-end development.",
+        "estimatedSalary": {
+          "@type": "MonetaryAmount",
+          "currency": "USD",
+          "value": {
+            "@type": "QuantitativeValue",
+            "minValue": 1000,
+            "maxValue": 5000,
+            "unitText": "MONTH"
           }
         },
-        "owns": {
-          "@type": "SoftwareApplication",
-          "name": "Galal Helany Portfolio",
-          "url": "https://galalhelany.com",
-          "applicationCategory": "Portfolio",
-          "operatingSystem": "All"
+        "occupationLocation": {
+          "@type": "Country",
+          "name": "Syria"
         }
-      } <
-      />
-
-
-      <
-      link href = "assets/css/normalize-8.0.1.css"
-    rel = "stylesheet" >
-      <
-      link href = "assets/css/reset.css"
-    rel = "stylesheet" >
-      <
-      link href = "assets/css/font.css"
-    rel = "stylesheet" >
-      <
-      link href = "assets/css/variables.css"
-    rel = "stylesheet" >
-      <
-      link href = "assets/css/color.css"
-    rel = "stylesheet" >
-      <
-      link href = "assets/css/style.css"
-    rel = "stylesheet" >
-      <
-      link href = "assets/css/grid.css"
-    rel = "stylesheet" >
-      <
-      link href = "assets/css/media-queries.css"
-    rel = "stylesheet" >
-
-      <
-      script src = "assets/js/modernizr.js" >
+      },
+      "owns": {
+        "@type": "SoftwareApplication",
+        "name": "Galal Helany Portfolio",
+        "url": "https://galalhelany.com",
+        "applicationCategory": "Portfolio",
+        "operatingSystem": "All"
+      }
+    }
   </script>
+
+
+
+
+  <link href="assets/css/normalize-8.0.1.css" rel="stylesheet">
+  <link href="assets/css/reset.css" rel="stylesheet">
+  <link href="assets/css/font.css" rel="stylesheet">
+  <link href="assets/css/variables.css" rel="stylesheet">
+  <link href="assets/css/color.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/grid.css" rel="stylesheet">
+  <link href="assets/css/media-queries.css" rel="stylesheet">
+
+  <script src="assets/js/modernizr.js"></script>
   <script src="assets/js/jquery-3.7.1.min.js"></script>
   <script src="assets/js/jquery-easing-1.4.1.js"></script>
   <script src="assets/js/script.js"></script>
