--- a/index-ar.html
+++ b/index-ar.html
@@ -95,6 +95,10 @@
         "addressCountry": "SY"
       },
       "url": "https://galalhelany.com",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://galalhelany.com"
+      },
       "knowsAbout": ["تصميم واجهة المستخدم", "تجربة المستخدم", "تصميم المنتجات", "تصميم الويب",
         "تطوير الواجهة الأمامية", "العلامات التجارية"
       ],
@@ -104,28 +108,15 @@
         "name": "عمل حر"
       },
       "knowsLanguage": ["العربية", "الإنجليزية"],
-      "mainEntityOfPage": {
-        "@type": "WebPage",
-        "@id": "https://galalhelany.com"
-      },
       "hasOccupation": {
         "@type": "Occupation",
         "name": "مصمم واجهة وتجربة المستخدم",
         "description": "إنشاء تجارب رقمية موجهة للمستخدم من خلال تصميم UX/UI، تصميم الويب، وتطوير الواجهة الأمامية.",
-        "estimatedSalary": {
-          "@type": "MonetaryAmount",
-          "currency": "USD",
-          "value": {
-            "@type": "QuantitativeValue",
-            "minValue": 1000,
-            "maxValue": 5000,
-            "unitText": "MONTH"
-          }
-        },
         "occupationLocation": {
           "@type": "Country",
           "name": "سوريا"
-        }
+        },
+        "estimatedSalary": "1000-5000 USD per month"
       },
       "owns": {
         "@type": "SoftwareApplication",
@@ -136,6 +127,7 @@
       }
     }
   </script>
+
 
 
 
