--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
         "addressCountry": "SY"
       },
       "url": "https://galalhelany.com",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://galalhelany.com"
+      },
       "knowsAbout": ["User Interface Design", "User Experience", "Product Design", "Web Design",
         "Front-End Development", "Branding"
       ],
@@ -105,28 +109,15 @@
         "name": "Freelance"
       },
       "knowsLanguage": ["Arabic", "English"],
-      "mainEntityOfPage": {
-        "@type": "WebPage",
-        "@id": "https://galalhelany.com"
-      },
       "hasOccupation": {
         "@type": "Occupation",
         "name": "UI/UX Designer",
         "description": "Creating user-focused digital experiences through UX/UI design, web design, and front-end development.",
-        "estimatedSalary": {
-          "@type": "MonetaryAmount",
-          "currency": "USD",
-          "value": {
-            "@type": "QuantitativeValue",
-            "minValue": 1000,
-            "maxValue": 5000,
-            "unitText": "MONTH"
-          }
-        },
         "occupationLocation": {
           "@type": "Country",
           "name": "Syria"
-        }
+        },
+        "estimatedSalary": "1000-5000 USD per month"
       },
       "owns": {
         "@type": "SoftwareApplication",
@@ -137,6 +128,7 @@
       }
     }
   </script>
+
 
 
 
