--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     content="UI UX designer Syria, product designer Syria, web design, graphic design, responsive web design, UI designer, UX designer, freelance designer Syria ,designer, product designer, brand designer, design director, best designers" />
   <meta name="author" content="Galal Helany" />
   <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon-32x32.ico">
-  <link rel="canonical" href="galalhelany.com">
+  <link rel="canonical" href="https://galalhelany.com/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
