--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             <div class="item"><a
                 href="mailto:hello@galalhelany.com?subject=Enquiry%20from%20website">hello@galalhelany.com</a></div>
             <div class="item"><a href="https://www.linkedin.com/in/galalhelany" target="_blank">LinkedIn</a></div>
-            <div class="item"><a href="https://www.linkedin.com/in/galalhelany" target="_blank">behance</a></div>
+            <div class="item"><a href="https://www.behance.net/galalhelany" target="_blank">behance</a></div>
             <div class="colophon">
               <p>
                 <span class="description">Made by <a href="https://galalhelany.com/">Galal
