--- a/index-ar.html
+++ b/index-ar.html
@@ -516,7 +516,7 @@
             <div class="item"><a
                 href="mailto:hello@galalhelany.com?subject=Enquiry%20from%20website">hello@galalhelany.com</a></div>
             <div class="item"><a href="https://www.linkedin.com/in/galalhelany" target="_blank">LinkedIn</a></div>
-            <div class="item"><a href="https://www.linkedin.com/in/galalhelany" target="_blank">behance</a></div>
+            <div class="item"><a href="https://www.behance.net/galalhelany" target="_blank">behance</a></div>
             <div class="colophon">
               <p>
                 <span class="description">صنع بواسطة<a href="https://galalhelany.com/">جلال حيلاني
