--- a/index-ar.html
+++ b/index-ar.html
@@ -7,14 +7,14 @@
   <title>جلال حيلاني | مصمم من البداية للنهاية</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="canonical" href="https://galalhelany.com" />
+  <link rel="canonical" href="https://galalhelany.com/index-ar.html" />
   <meta name="description"
     content="جلال حيلاني مصمم منتجات وتجارب مستخدم (UX/UI) وهوية بصرية، من سوريا. استعرض أعمالي، مشاريعي، وتواصل معي مباشرة." />
   <meta name="keywords"
     content="مصمم UX UI سوريا, مصمم منتجات سوريا, تصميم مواقع, تصميم جرافيك, تصميم متجاوب, مصمم تجربة مستخدم, مصمم واجهة مستخدم, مصمم حر سوريا, مصمم علامات تجارية, مصمم متكامل, أفضل المصممين" />
   <meta name="author" content="جلال حيلاني" />
   <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon-32x32.ico">
-  <link rel="canonical" href="https://galalhelany.com">
+  <link rel="canonical" href="https://galalhelany.com/index-ar.html">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -24,7 +24,7 @@
   <meta property="og:title" content="جلال حيلاني | مصمم متكامل (منتجات، UX/UI، وهوية بصرية)" />
   <meta property="og:description"
     content="اكتشف أعمال ومشاريع جلال حيلاني، مصمم منتجات وتجارب مستخدم وهوية بصرية من سوريا." />
-  <meta property="og:url" content="https://galalhelany.com" />
+  <meta property="og:url" content="https://galalhelany.com/index-ar.html" />
   <meta property="og:site_name" content="جلال حيلاني" />
   <meta property="og:image" content="https://galalhelany.com/assets/img/sharing-image-2400x2400" />
 
@@ -33,7 +33,7 @@
   <meta name="twitter:title" content="جلال حيلاني | مصمم متكامل (منتجات، UX/UI، وهوية بصرية)" />
   <meta name="twitter:description"
     content="اكتشف أعمال ومشاريع جلال حيلاني، مصمم منتجات وتجارب مستخدم وهوية بصرية من سوريا." />
-  <meta name="twitter:url" content="https://galalhelany.com" />
+  <meta name="twitter:url" content="https://galalhelany.com/index-ar.html" />
   <meta name="twitter:image" content="https://galalhelany.com/assets/img/sharing-image-2400x2400" />
 
   <!-- Google tag (gtag.js) -->
@@ -94,10 +94,10 @@
         "@type": "PostalAddress",
         "addressCountry": "SY"
       },
-      "url": "https://galalhelany.com",
+      "url": "https://galalhelany.com/index-ar.html",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://galalhelany.com"
+        "@id": "https://galalhelany.com/index-ar.html"
       },
       "knowsAbout": ["تصميم واجهة المستخدم", "تجربة المستخدم", "تصميم المنتجات", "تصميم الويب",
         "تطوير الواجهة الأمامية", "العلامات التجارية"
@@ -121,7 +121,7 @@
       "owns": {
         "@type": "SoftwareApplication",
         "name": "محفظة جلال حيلاني",
-        "url": "https://galalhelany.com",
+        "url": "https://galalhelany.com/index-ar.html",
         "applicationCategory": "محفظة أعمال",
         "operatingSystem": "جميع الأنظمة"
       }
